#916 -- Fix shifting header elements on logo scroll effect

--- a/stories/Components/Navigationcomponents/Mainnavigation/GlobalHeader/global-header.scss
+++ b/stories/Components/Navigationcomponents/Mainnavigation/GlobalHeader/global-header.scss
@@ -7,19 +7,25 @@
   .header {
     @extend %header;
 
+    height: 7.1875rem;
+
     @include devicebreak(mediumonlytab) {
       height: 4.6875rem;
     }
 
-    @include devicebreak(xlarge) {
-      .fluid {
+    .fluid {
+      height: 7.1875rem;
+
+      @include devicebreak(xlarge) {
         margin: 0 $spacing-70;
+      }
+
+      @include devicebreak(mediumonlytab) {
+        height: 4.6875rem;
       }
     }
 
     .top-left {
-      margin-bottom: 7px;
-
       @include devicebreak(xlarge) {
         margin-bottom: 0;
       }
@@ -42,10 +48,7 @@
       display: flex;
       justify-content: center;
       position: relative;
-
-      @include devicebreak(xlarge) {
-        height: 7.1875rem;
-      }
+      height: 7.1875rem;
 
       nav {
         @include devicebreak(mediumonlytab) {
@@ -59,6 +62,7 @@
         align-items: stretch;
         display: flex;
         height: 100%;
+        max-height: 7.1875rem;
         left: 50%;
         padding-left: 3.375rem;
         position: absolute;
@@ -98,7 +102,7 @@
           a {
             display: flex;
             align-items: center;
-            margin-top: -15px;
+            //margin-top: -15px;
 
             @include devicebreak(xlarge) {
               margin-top: 0;
@@ -140,7 +144,6 @@
     .top-right {
       display: flex;
       justify-content: flex-end;
-      margin-bottom: 15px;
 
       @include devicebreak(xlarge) {
         margin-bottom: 0;
